# BioKEEN

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  requirements-rtd.txt  setup.cfg  setup.py  tox.ini
data/: configuration.json  drugbank.keen.tsv  wikipathways.keen.tsv
docs/source/: bio2bel_repositories.rst  cli.rst  conf.py  convert.rst  hyper_parameter_optimization.rst  index.rst  installation.rst  run_biokeen.rst  summarize.rst  train_and_evaluate.rst
docs/source/cli/: inference.rst  summarize.rst  train_and_evaluate.rst
notebooks/: Case Scenario ADEPTUS and HSDN.ipynb  Case Scenario ADEPTUS.ipynb  Case Scenario ComPath.ipynb  Case Scenario HSDN.ipynb  README.rst  Train on ADEPTUS in Training Mode.ipynb  Train on ComPath in Training Mode.ipynb  Train on HSDN in Training Mode.ipynb
src/biokeen/: __init__.py  __main__.py  build.py  cli.py  constants.py  content.py  convert.py  converters.py  pipeline.py  run.py  sources.py
src/biokeen/cli/: __init__.py  __main__.py  cli.py  prompts.py
src/biokeen/cli_utils/: __init__.py  bio_2_bel_utils.py  cli_print_msg_helper.py  cli_query_helper.py  prompt_utils.py
src/biokeen/convert/: __init__.py  converters.py  io.py
tests/: __init__.py  test_convert.py  test_simple.py
