##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = biokeen
version = 0.0.12-dev
url = https://github.com/SmartDataAnalytics/BioKEEN
author = Mehdi Ali
author_email = mehdi.ali@cs.uni-bonn.de
maintainer = Mehdi Ali
maintainer_email = mehdi.ali@cs.uni-bonn.de
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
license = MIT
description = BioKEEN (KnowlEdge EmbeddiNgs) is a package for training and evaluating biological knowledge graph embeddings
long_description = file: README.rst
keywords =
    KEEN
    knowledge embedding

[options]
install_requires =
    mock
    pybel
    bio2bel
    tqdm
    pandas
    pykeen

zip_safe = false
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    biokeen = biokeen.cli:main
pykeen.data.importer =
	bio2bel = biokeen.content:handle_bio2bel

#############################
# bdist_wheel Configuration #
#############################
[bdist_wheel]
python-tag = py36

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = biokeen
omit =
    tests/*
    docs/*
    src/biokeen/cli_utils/*
    src/biokeen/cli.py
    src/biokeen/__main__.py

[coverage:paths]
source =
    src/biokeen
    .tox/*/lib/python*/site-packages/biokeen

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
