##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = biokeen
version = 0.0.14-dev
description = A package for training and evaluating biological knowledge graph embeddings
long_description = file: README.rst

url = https://github.com/SmartDataAnalytics/BioKEEN
download_url = https://github.com/SmartDataAnalytics/BioKEEN/releases
project_urls =
    Bug Tracker = https://github.com/SmartDataAnalytics/BioKEEN/issues
    Documentation = https://biokeen.readthedocs.io

author = Mehdi Ali
author_email = mehdi.ali@cs.uni-bonn.de
maintainer = Mehdi Ali
maintainer_email = mehdi.ali@cs.uni-bonn.de

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
keywords =
    KEEN
    knowledge embedding

[options]
install_requires =
    mock
    pybel
    bio2bel
    tqdm
    pandas
    pykeen
    click-default-group
    click

zip_safe = false
python_requires = >=3.6
packages = find:
package_dir =
    = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_autodoc_typehints

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    biokeen = biokeen.cli:main
pykeen.data.importer =
	bio2bel = biokeen.content:handle_bio2bel
	bel_commons = biokeen.content:handle_bel_commons

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = biokeen
omit =
    tests/*
    docs/*
    src/biokeen/cli/*
    src/biokeen/__main__.py

[coverage:paths]
source =
    src/biokeen
    .tox/*/lib/python*/site-packages/biokeen

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
